# EatCookiesBot

./: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  dev_requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
database/: Dockerfile  init_data.sql  null_open_period.sql
docs/: data_generation.md
src/: bot.py  db.py  mailing.py  main.py  polls.py  settings.py  tickets.py  timezone.py  translation.py  utils.py
src/database/: __init__.py  core.py  tables.py
src/tests/: test_polls_results.py
src/tests/mock/: poll_votes.py
